tests/machine/x/c/group_by_left_join.error
line: 0
error: output mismatch
-- got --
--- Group Left Join ---
-- want --
--- Group Left Join ---
Alice orders: 2
Bob orders: 1
Charlie orders: 0
   1: // Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:09Z
